--- a/resources/frontend_client/app/css/query_builder.css
+++ b/resources/frontend_client/app/css/query_builder.css
@@ -249,6 +249,7 @@
     position: relative;
     border-bottom: 1px solid #F0F0F0;
     max-height: 100%;
+    z-index: 4000;
 }
 
 .GuiBuilder.GuiBuilder--collapsed {
